fix z-index for contribution hover

--- a/components/layout/timeline.scss
+++ b/components/layout/timeline.scss
@@ -34,7 +34,7 @@ $topMargin: 7rem;
     .arrow:after,
     .arrow:before {
       top: 50%;
-      z-index: 10;
+      z-index: 5;
       border: solid transparent;
       content: " ";
       height: 0;
